--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,15 @@
   pointer-events: none;
 }
 
+.Greet {
+  text-align: center;
+  font-size: 50px;
+  animation: App-logo-spin infinite 10s linear;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 30s linear;
   }
 }
 
